--- a/source/sass/blocks/how-go.scss
+++ b/source/sass/blocks/how-go.scss
@@ -121,41 +121,41 @@
 
 .how-go__condition {
   margin-bottom: 54px;
+}
 
-  &:nth-child(2) {
-    margin-bottom: 46px;
+.how-go__condition--second {
+  margin-bottom: 46px;
 
-    & p::after {
-      content: "2";
-    }
+  & p::after {
+    content: "2";
+  }
+}
+
+.how-go__condition--third {
+  margin-bottom: 39px;
+
+  & p::after {
+    top: 1px;
+    content: "3";
+  }
+}
+
+.how-go__condition--fourth {
+  margin-bottom: 20px;
+
+  & p::after {
+    top: -4px;
+    content: "4";
   }
 
-  &:nth-child(3) {
-    margin-bottom: 39px;
-
-    & p::after {
-      top: 1px;
-      content: "3";
-    }
-  }
-
-  &:last-child {
-    margin-bottom: 20px;
-
-    & p::after {
-      top: -4px;
-      content: "4";
-    }
-
-    & p::before {
-      position: absolute;
-      content: "";
-      width: 5px;
-      height: 110px;
-      top: 31px;
-      left: -46px;
-      background-color: #ffffff;
-    }
+  & p::before {
+    position: absolute;
+    content: "";
+    width: 5px;
+    height: 110px;
+    top: 31px;
+    left: -46px;
+    background-color: #ffffff;
   }
 }
 
@@ -268,36 +268,36 @@
       top: -9px;
       left: -53px;
     }
+  }
 
-    &:nth-child(2) {
-      margin-bottom: 37px;
+  .how-go__condition--second {
+    margin-bottom: 37px;
 
-      & p::after {
-        content: "2";
-        top: 2px;
-      }
+    & p::after {
+      content: "2";
+      top: 2px;
+    }
+  }
+
+  .how-go__condition--third {
+    margin-bottom: 26px;
+
+    & p::after {
+      top: 13px;
+      content: "3";
+    }
+  }
+
+  .how-go__condition--fourth {
+    margin-bottom: 0;
+
+    & p::before {
+      left: -37px;
     }
 
-    &:nth-child(3) {
-      margin-bottom: 26px;
-
-      & p::after {
-        top: 13px;
-        content: "3";
-      }
-    }
-
-    &:last-child {
-      margin-bottom: 0;
-
-      & p::before {
-        left: -37px;
-      }
-
-      & p::after {
-        top: 13px;
-        content: "4";
-      }
+    & p::after {
+      top: 13px;
+      content: "4";
     }
   }
 
