коммитит и пушит проект на ретест

--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -237,6 +237,10 @@
   margin-right: 23px;
   margin-bottom: 15px;
 
+  &:valid {
+    border-color: #484848;
+  }
+
   &:focus {
     border-color: #ffd701;
   }
