--- a/source/sass/blocks/modal-success.scss
+++ b/source/sass/blocks/modal-success.scss
@@ -80,7 +80,7 @@
     padding-left: 26px;
     padding-right: 26px;
     width: 100%;
-    border-radius: none;
+    border-radius: 0;
     box-shadow: none;
     text-align: center;
   }
