--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -54,8 +54,10 @@
 .page-header__logo {
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 60%;
+  top: 56%;
   left: 49.8%;
+  font-size: 0;
+  line-height: 1;
 
   &:hover {
     opacity: 0.8;
